<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservoir_dogs_1992"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:id="@+id/iv_reservoir_dogs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/reservoir_dogs"
                android:tag="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pulp_fiction_1994"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_pulp_fiction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/pulp_fiction"
                android:tag="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jackie_brown_1997"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_jackie_brown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/jackie_brown"
                android:tag="3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kill_bill_vol_1_2003"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_kill_bill_vol1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/kill_bill_vol_1"
                android:tag="4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kill_bill_vol_2_2004"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_kill_bill_vol2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/kill_bill_vol_2"
                android:tag="5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/death_proof_2007"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_death_proof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/death_proof"
                android:tag="6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inglorious_basterds_2009"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_inglorious_basterds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/inglorious_basterds"
                android:tag="7"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/django_unchained_2012"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_django_unchained"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/django"
                android:tag="8"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/the_hateful_eight_2015"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_the_hateful_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/the_hateful_eight"
                android:tag="9"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/once_upon_a_time_in_hollywood_2019"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/iv_once_upon_a_time_in_hollywood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/once_upon_a_time_in_hollywood"
                android:tag="10"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>